button letter spacing fix

--- a/components/styles/Button.module.css
+++ b/components/styles/Button.module.css
@@ -92,7 +92,8 @@ button.buttonSax:active::before {
 
 @media (max-width: 375px) {
     .buttonSax {
-        font-size: 0.8em;
+        font-size: 0.9em;
+        letter-spacing: -0.025em;
         font-weight: 600;
         /* Adjust the font size for smaller screens */
         padding: 1em 1.4em;
